# Fortran-Mixed

./: .gitignore  README.md
BINDING_C/: README.md  a.out  compile.sh  exampleCPP.cpp  exampleFOR.f90
FORPY_EXAMPLE/: compile.sh  example_usage.f90
FORPY_EXAMPLE/python_modules/: readModule.py
MPI/: CMakeLists.txt
MPI/src/: dotproduct.f90  main.f90  trapz.f90  trapzv1.f90
MPI_F2PY/: bind.sh  simple.py  subroutine.f90
MPI_F2PY/EXAMPLE_SIMPLE/: bind.sh  mpi4py_example.py  simple.py  subroutine.f90
MPI_F2PY/MESH_READING/: bindMesh.sh  get_interpolation_matrix.f90  global_variables.f90  locate.f90  read_mesh.py
OOP/Basic_Tutorial/: Rational.f90  main.f90
OOP/Shape/: Rectangle.f90  Shape.f90  main.f90
OPTIMIZATION-FOLDER/: CMakeLists.txt
OPTIMIZATION-FOLDER/src/apps/: testNLsolver.f90
OPTIMIZATION-FOLDER/src/modules/: NLsolverWrapper.f90
OpenAD/: README.md
OpenAD/DSEM/TLM_vec/: .#gauss_xf.f90  OAD_active_old.f90  driverInterp  driverInterpTLV.f90  driverTLV  driverTLV.f90  gauss_xf.f90  gauss_xs.f90  interpolation.prepped.f90  numCore.f90
OpenAD/FLUXES/: rusanovFlux.f90  rusanovFluxV2.f90
OpenAD/FLUXES/REVERSE/: driverADJs.f90  rusanovFlux.f90
OpenAD/FLUXES/TLM/: driverTLM  driverTLM.f90  rusanovFlux.f90  rusanovFlux.pre.xb.x2w.w2f.post.f90
OpenAD/GlobalMod/: calc_curve.f90  calc_curve.prepped.f90  var.f90
OpenAD/GlobalMod/ADMsplit/: driver.f90  driverADJS  numCore.f90  numCore.pre.B  numCore.pre.f90  numCore.pre.xb.x2w.B  numCore.pre.xb.x2w.w2f.f  numCore.pre.xb.x2w.w2f.post.f90
OpenAD/GlobalMod/TLM/: driver.f90  numCore.f90
OpenAD/Loss/: driver  driver.f90  loss_function.f90  loss_function.pre.B  loss_function.pre.f90  loss_function.pre.xb.x2w.B  loss_function.pre.xb.x2w.w2f.f  loss_function.pre.xb.x2w.w2f.post.f90
OpenAD/Multiple_modules/TLM_VEC/: driver  driverTLM.f90  numCore.f90
OpenAD/NN/: forward.f90  forward.prepped.f90  numCore.f90  var.f90
OpenAD/NN/ADMsplit/: driverADS  driverADS.f90
OpenAD/NN/ADMsplit_alloc/: driverADS.f90  driverADSnew  numCoreNew.f90
OpenAD/NN/ADMsplit_multiple/: NetUtils.f90  OADtemplate  ad_template_getlayer.f90  bho.backup  driverADS  driverADS.f90  numCore.f  numCore.f90
OpenAD/NN/ADMsplit_new/: driverADS  driverADS.f90  driverADSnew  numCore.f90  numCoreNew.f90
OpenAD/NN/TLM_vec/: NetUtils.f90  driverTLV  driverTLV.f90  numCore.f90
OpenAD/NN/temporary/: numCore.f90
POINTERS/: main.f90
SPECTRAL_METHODS/FourierSpectralMethods/: CMakeLists.txt
SPECTRAL_METHODS/FourierSpectralMethods/apps/: ImplicitSolver  post_proc.py
SPECTRAL_METHODS/FourierSpectralMethods/src/apps/: main.f90  test1d.f90  testImplicitSolver.f90  testNLsolver.f90  testSpectralSolver.f90  testWrapper.f90  test_solver.f90
SPECTRAL_METHODS/FourierSpectralMethods/src/modules/: FourierOperators.f90  FourierUtils.f90  FourierVar1d.f90  Interp1DClass.f90  Interp2DClass.f90
SPECTRAL_METHODS/Interpolant/: CMakeLists.txt
SPECTRAL_METHODS/Interpolant/modules/: fourierinterp1dclass.smod
SPECTRAL_METHODS/Interpolant/src/apps/: main.f90  mainv0.f90  testWrapper.f90  test_solver.f90
SPECTRAL_METHODS/Interpolant/src/modules/: #Interp1DClass.f90#  Interp1DClass.f90  Interp2DClass.f90  SpectralDerivative1D.f90
TORCH_EXAMPLE/: CMakeLists.txt
TORCH_EXAMPLE/src/apps/: MLP.py  test.f90
